--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -5,3 +5,18 @@ module(
 )
 
 bazel_dep(name = "platforms", version = "0.0.8")
+
+# bazel_dep(name = "rules_python", version = "0.28.0")
+# python = use_extension("@rules_python//python/extensions:python.bzl", "python")
+# python.toolchain(
+#     python_version = "3.11",
+# )
+# use_repo(python, "python_3_11")
+# pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
+# pip.parse(
+#     hub_name = "supertool_pip",
+#     # Available versions are listed in @rules_python//python:versions.bzl.
+#     python_version = "3.11",
+#     requirements_lock = "//:requirements.txt",
+# )
+# use_repo(pip, "supertool_pip")
