--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -1,3 +1,9 @@
+"""
+Hey there! This module is from https://github.com/dynacondev/boost.rules.tools
+This module has some essential functions in tools.bzl and the BUILD.bazel file which are used by ALL the Boost libraries in the Bazel Central Registry
+It also has the super_tool.py which is essential for making changes to the Bazel modules. Check out the repo for instructions!
+"""
+
 module(
     name = "boost.rules.tools",
     version = "1.0.0",
